# chess-game

./: .clang-format  CMakeLists.txt  bishop.cpp  bishop.h  board.cpp  board.h  build.bat  enums.h  game.cpp  game.h  game_engine.cpp  game_engine.h  main.cpp  pawn.cpp  pawn.h  piece.h  player.cpp  player.h  position.h  rook.cpp  rook.h  square.cpp  square.h
.github/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
utilities/: CMakeLists.txt  definitions.h  initialize_helper.h
